--- a/apoc.conf
+++ b/apoc.conf
@@ -1,5 +1,5 @@
 apoc.import.file.enabled=true
 apoc.import.file.use_neo4j_config=true
 apoc.initializer.neo4j.0=CALL apoc.warmup.run()
-apoc.initializer.neo4j.1=CALL gds.graph.project('main-lines-network', 'Node', {relType: {type: 'CONNECTS_MIO', orientation: 'UNDIRECTED',properties: {miles: {property: 'miles', defaultValue: 1}}}}, {})
-apoc.initializer.neo4j.2=CALL gds.graph.project('double-stack-network', 'Node', {relType: {type: 'CONNECTS_DS', orientation: 'UNDIRECTED',properties: {miles: {property: 'miles', defaultValue: 1}}}}, {})
+#apoc.initializer.neo4j.1=CALL gds.graph.project('main-lines-network', 'Node', {relType: {type: 'CONNECTS_MIO', orientation: 'UNDIRECTED',properties: {miles: {property: 'miles', defaultValue: 1}}}}, {})
+#apoc.initializer.neo4j.2=CALL gds.graph.project('double-stack-network', 'Node', {relType: {type: 'CONNECTS_DS', orientation: 'UNDIRECTED',properties: {miles: {property: 'miles', defaultValue: 1}}}}, {})
